# simulation-game

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Manager.cpp  Manager.hpp  Sprite.cpp  Sprite.hpp  TextureManager.cpp  TextureManager.hpp  Vector2d.cpp  Vector2d.hpp
src/entities/: CMakeLists.txt  Food.cpp  Food.hpp  Human.cpp  Human.hpp  Sprite.hpp  Tree.cpp  Tree.hpp
src/sdl/: CMakeLists.txt  Events.cpp  Events.hpp  Renderer.cpp  Renderer.hpp  SDL.cpp  SDL.hpp  SDLWrappers.cpp  SDLWrappers.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  detail.cpp  detail.hpp
src/util/: CMakeLists.txt  Vector2d.cpp  Vector2d.hpp
